--- a/grid.css
+++ b/grid.css
@@ -1,56 +1,51 @@
-/* ---------------------------------------------------- *\
-	WRAPPER 
-\* ---------------------------------------------------- */
-
-.grid {
-	width: 100%;
-	max-width: 1000px;  /* Set width of content container */
+/**
+ * GRID CSS
+ * 
+ * Author: Jon W
+ * Version: 2.0
+ * Description: Simple CSS styles for a grid layout.
+ * Comments: Default gutter size is 20px. Change in $gridGutter variable.
+ */
+/**
+ * VARIABLES
+ */
+/**
+ * WRAPPER
+ */
+.grid-wrapper {
+  margin-left: -20px;
+  overflow: auto;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
-
-[class*='col-'] {
+.grid-wrapper .grid-col {
   float: left;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-.grid:after {
-  content: "";
-  display: table;
-  clear: both;
+/**
+ * COLUMNS
+ */
+.grid-col {
+  width: 100%;
+  padding-left: 20px;
+  padding-bottom: 20px;
 }
-
-/* ---------------------------------------------------- *\
-	COLUMNS
-\* ---------------------------------------------------- */
-
-.col-1-3 {
-	width: 33.33%;
+.grid-col.col-1-2 {
+  width: 50%;
 }
-
-.col-2-3 {
-	width: 66.66%;
+.grid-col.col-1-3 {
+  width: 33.33%;
 }
-
-/* ---------------------------------------------------- *\
-	GUTTER
-\* ---------------------------------------------------- */
-
-*, *:after, *:before {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+.grid-col.col-2-3 {
+  width: 66.66%;
 }
-
-[class*='col-'] {
-	padding-right: 20px;
+.grid-col.col-1-4 {
+  width: 25%;
 }
-
-[class*='col-']:last-of-type {
-	padding-right: 0;
-}
-
-.grid-pad {
-	padding: 20px 0 20px 20px;
-}
-
-.grid-pad > [class*='col-']:last-of-type {
-	padding-right: 20px;	
+.grid-col.col-3-4 {
+  width: 75%;
 }
